Atualização total dos arquivos virando a lanchonete

--- a/src/main/resources/templates/menu.html
+++ b/src/main/resources/templates/menu.html
@@ -7,17 +7,13 @@
 <body>
 	<nav th:fragment="menu" >
 		<div class="nav-wrapper container">
-			<a href="/" class="brand-logo">Sistema de Eventos</a>
+			<a href="/" class="brand-logo">Nowstálgico</a>
 			<ul id="nav-mobile" class="right hide-on-med-and-down">
 				<li><a href="/">Home</a></li>
-				<li><a href="/eventos/form">Adiconar Evento</a></li>
+				<li><a href="/locadora/form">Adicionar Filmes</a></li>
 				
 			</ul>
 		</div>
 	</nav>
-
-
-
-	
 </body>
 </html>
