--- a/src/main/resources/templates/locadora/filme-adicionar.html
+++ b/src/main/resources/templates/locadora/filme-adicionar.html
@@ -5,11 +5,11 @@
 <!-- Compiled and minified CSS -->
 <link rel="stylesheet"
 	href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css">
-<title>Eventos</title>
+<title>Nowstálgico</title>
 </head>
 <body>
 	<div th:replace="~{menu :: menu}"></div>
 	<div class="container">
-	<h1>Evento adionado com sucesso</h1>
+	<h1>Filme adionado com sucesso</h1>
 </body>
 </html>
