Colocação de imagens e complementos, branch com nome errado

--- a/src/main/resources/templates/locadora/formFilme.html
+++ b/src/main/resources/templates/locadora/formFilme.html
@@ -5,6 +5,7 @@
 <!-- Compiled and minified CSS -->
 <link rel="stylesheet"
 	href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css">
+		<link rel="icon" href="/Nowstalgico.ico" />
 <title>Nowstálgico</title>
 </head>
 <body>
@@ -35,7 +36,7 @@
 			</div>
 
 			<div>
-				<label>Capa:</label> <input type="text" name="capa" th:value="${filme.capa}">
+				<label>Capa(Link da Imagem):</label> <input type="text" name="capa" th:value="${filme.capa}">
 			</div>
 
 			<div>
