--- a/src/main/resources/templates/locadora/filme-adicionar.html
+++ b/src/main/resources/templates/locadora/filme-adicionar.html
@@ -5,11 +5,13 @@
 <!-- Compiled and minified CSS -->
 <link rel="stylesheet"
 	href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css">
+		<link rel="icon" href="/Nowstalgico.ico" />
 <title>Nowstálgico</title>
 </head>
 <body>
 	<div th:replace="~{menu :: menu}"></div>
 	<div class="container">
 	<h1>Filme adionado com sucesso</h1>
+	</div>
 </body>
 </html>
