--- a/src/main/resources/templates/menu.html
+++ b/src/main/resources/templates/menu.html
@@ -7,7 +7,8 @@
 <body>
 	<nav th:fragment="menu" >
 		<div class="nav-wrapper container">
-			<a href="/" class="brand-logo">Nowstálgico</a>
+			<a href="/" class="brand-logo">
+    <img src="/Nowstalgico.ico" alt="Logo" style="height:70px; vertical-align:middle; margin-right:10px;"></a>
 			<ul id="nav-mobile" class="right hide-on-med-and-down">
 				<li><a href="/">Home</a></li>
 				<li><a href="/locadora/form">Adicionar Filmes</a></li>
