--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -1,20 +1,26 @@
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org">
 <head>
-<meta charset="UTF-8">
-<!-- Compiled and minified CSS -->
-<link rel="stylesheet"
-	href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css">
-	<link rel="icon" href="/Nowstalgico.ico" />
-<title>Nowstálgico</title>
+    <meta charset="UTF-8">
+
+    <!-- Materialize CSS -->
+    <link rel="stylesheet"
+          href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css">
+
+    <link rel="icon" href="/Nowstalgico.ico" />
+    <title>Nowstálgico</title>
 </head>
 <body>
 
-	<div th:replace="~{menu :: menu}"></div>
+    <!-- NAVBAR VINDO DO FRAGMENTO -->
+    <div th:replace="~{menu :: menu}"></div>
 
-	<div class="container">
-	<h1>Bem vindo a nossa aplicação</h1>
-	<h2>Graça a Deus deu certo</h2>
-	</div>
+    <div class="container">
+        <h1>Bem vindo à nossa aplicação</h1>
+        <h2>Graça a Deus deu certo</h2>
+    </div>
+
+    <!-- Materialize JS -->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
 </body>
 </html>
