--- a/src/main/resources/templates/menu.html
+++ b/src/main/resources/templates/menu.html
@@ -26,8 +26,8 @@
             <li ><a href="/locadora/form" style="color:black;">Adicionar Filmes</a>
             </li>
 
-            <li><a th:href="@{/login}" style="color:black;">Login</a></li>
-            <li><a th:href="@{/logout}" style="color:black;">Logout</a></li>
+            
+            <li><a th:href="@{/logout}" style="color:black;">Sair</a></li>
 
         </ul>
         
