--- a/src/main/resources/templates/Usuarios/edit.html
+++ b/src/main/resources/templates/Usuarios/edit.html
@@ -16,12 +16,11 @@
 
 <body>
 
-	<div th:replace="~{fragments/commons :: cabecalho}"></div>
-	<div th:replace="~{fragments/commons :: menu}"></div>
+	
 
 	<div class="container">
 		<div class="row">
-			<h3>Lista de Usuários</h3>
+			<h3>Edição de Papeis</h3>
 		</div>
 		
 		<div class="row">
@@ -89,7 +88,7 @@
 		});
 	</script>
 
-	<div th:replace="~{fragments/commons :: rodape}"></div>
+	
 </body>
 
 </html>
