--- a/src/main/resources/templates/menu.html
+++ b/src/main/resources/templates/menu.html
@@ -23,11 +23,10 @@
             <li><a href="/" style="color:black;">Home</a></li>
 
             <!-- BOTÃO VISÍVEL APENAS PARA ADMIN -->
-            <li ><a href="/locadora/form" style="color:black;">Adicionar Filmes</a>
-            </li>
-
+            <li sec:authorize="hasRole('ADMIN')"><a href="/locadora/form" style="color:black;">Adicionar Filmes</a></li>
+			 <li sec:authorize="hasRole('ADMIN')"><a th:href="@{/usuarios}" style="color:black;">Usuários</a></li>
             
-            <li><a th:href="@{/logout}" style="color:black;">Sair</a></li>
+            <li sec:authorize="isAuthenticated()"><a th:href="@{/logout}" style="color:black;">Sair</a></li>
 
         </ul>
         
