--- a/src/main/resources/templates/login/login.html
+++ b/src/main/resources/templates/login/login.html
@@ -46,6 +46,9 @@
 								<div class="input-field col s12">
 									<button class="waves-effect waves-light btn col s12" type="submit">Login</button>
 								</div>
+								<div class="center input-field col s12">
+									<a href="/usuarios/form">Inscreva-se</a>
+								</div>
 								
 							</div>
 						</form>
