Criando a opção de poder alugar um filme por QR code

--- a/src/main/resources/templates/locadora/detalhes.html
+++ b/src/main/resources/templates/locadora/detalhes.html
@@ -89,6 +89,13 @@ nav.indigo.lighten-5 ul li a {
 
                 </div>
             </div>
+<div>
+    <form th:action="@{/comprar}" method="get">
+        <button class="waves-effect waves-light btn" type="submit">
+            Alugar
+        </button>
+    </form>
+</div>
         </div>
 
 	</div>
