--- a/src/main/resources/templates/Usuarios/edit.html
+++ b/src/main/resources/templates/Usuarios/edit.html
@@ -2,62 +2,64 @@
 <html xmlns:th="http://www.thymeleaf.org">
 
 <head>
-	<!--Import Google Icon Font-->
-	<link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
-	<!-- Compiled and minified CSS -->
-	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css"
-		media="screen,projection">
+<!--Import Google Icon Font-->
+<link href="https://fonts.googleapis.com/icon?family=Material+Icons"
+	rel="stylesheet">
+<!-- Compiled and minified CSS -->
+<link rel="stylesheet"
+	href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css"
+	media="screen,projection">
 
-	<!--Let browser know website is optimized for mobile-->
-	<meta name="viewport" content="width=device-width, initial-scale=1.0" />
-	<meta charset="UTF-8">
-	<title>Security</title>
+<!--Let browser know website is optimized for mobile-->
+<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+<meta charset="UTF-8">
+<title>Security</title>
 </head>
 
 <body>
 
-	
+
 
 	<div class="container">
 		<div class="row">
 			<h3>Edição de Papeis</h3>
+			
+			<
 		</div>
-		
+
 		<div class="row">
 
-			<form action="#"
-				th:action="@{/usuarios/{id}(id=${usuario.id})}"
-				th:object="${usuario}" method="post">
+			<form action="#" th:action="@{/usuarios/{id}(id=${usuarios.id})}"
+				th:object="${usuarios}" method="post">
 				<input type="hidden" th:field="*{id}">
 				<blockquote>
 					<div class="row">
 						<div class="col s3 m2">Nome:</div>
 						<div class="col s9 m10">
-							<span th:text="${usuario.nome}"></span>
+							<span th:text="${usuarios.nome}"></span>
 						</div>
 					</div>
 					<div class="row">
 						<div class="col s3 m2">CPF:</div>
 						<div class="col s9 m10">
-							<span th:text="${usuario.cpf}"></span>
+							<span th:text="${usuarios.cpf}"></span>
 						</div>
 					</div>
 					<div class="row">
 						<div class="col s3 m2">Email:</div>
 						<div class="col s9 m10">
-							<span th:text="${usuario.email}"></span>
+							<span th:text="${usuarios.email}"></span>
 						</div>
 					</div>
 					<div class="row">
 						<div class="col s3 m2">Papeis:</div>
 						<div class="col s9 m10">
 							<div th:each="papel : ${papeis}" class="switch">
-								<div class="row">
-									<label> <input type="checkbox" th:field="*{papeis}"
-										th:value="${papel.id}" /> <span class="lever"></span> <span
-										th:text="${papel.nome}"></span>
-									</label>
-								</div>
+								<label> <input type="checkbox" name="papeisIds"
+									th:value="${papel.id}"
+									th:checked="${usuarios.papeis.contains(papel)}" /> <span
+									class="lever"></span> <span th:text="${papel.nome}"></span>
+								</label>
 							</div>
 						</div>
 					</div>
@@ -69,6 +71,8 @@
 					<div class="col">
 						<a class="btn" th:href="@{/usuarios}">Cancelar</a>
 					</div>
+
+
 				</div>
 			</form>
 
@@ -77,18 +81,20 @@
 	<!-- Compiled and minified JavaScript -->
 	<!-- Compiled and minified JavaScript -->
 	<script src="https://code.jquery.com/jquery-3.4.1.min.js"
-		integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo=" crossorigin="anonymous"></script>
-	<script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
+		integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo="
+		crossorigin="anonymous"></script>
+	<script
+		src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
 	<script type="text/javascript">
-		$(document).ready(function () {
+		$(document).ready(function() {
 			$('.sidenav').sidenav();
 		});
-		$(document).ready(function () {
+		$(document).ready(function() {
 			$('select').formSelect();
 		});
 	</script>
 
-	
+
 </body>
 
 </html>
